Fix layout scrollbars problem

--- a/app/Layout.module.css
+++ b/app/Layout.module.css
@@ -9,6 +9,7 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 
   height: -webkit-fill-available;
   height: -moz-available;
@@ -43,5 +44,9 @@
     left: 0;
     right: 0;
     bottom: 0;
+  }
+
+  .mobile-panel + .content-wrapper {
+    display: none;
   }
 }
